# msrevelio

./: .gitmodules  README.md
bios_template/: README.md  diff.py  static_log.py
msr_document_parser/: README.md  parser.py  requirements.txt
msr_influences/: README.md
msr_influences/data/instructions/: aes.csv  cpuid.csv  fence.csv  flush.csv  fp_arith.csv  fp_vector_arith.csv  int_arith.csv  int_vector_arith.csv  load.csv  misc.csv  moves.csv  prefetch.csv  random.csv  store.csv  stride_memory.csv  time.csv
msr_influences/runner/: CMakeLists.txt  common.cc  common.h  main.cc  phase1.cc  phase1.h  phase2.cc  phase2.h  phase3.cc  phase3.h  reserved_msr_bits.csv  unknown_msrs_formatted.csv  utils.cc  utils.h
msr_influences/scripts/: invoke-nanobench_combined_dir-v2.sh  prepare_system.sh
msr_scans/: amd-ryzen-threadripper-1920x.csv  intel-core-i7-6700k.csv  intel-core-i7-8700k.csv  intel-core-i9-9900k.csv  intel-xeon-silver-4208.csv
scripts/sampling/: README.md  msrs_analyze.py  sample_all.sh
use_cases/aesni_solver/: Readme.md  cache_lookup.py  pt_0b65ba59651ff159c67f2185ef34c139.data  solve.py  tables.py
use_cases/cpuidtrap/: Makefile  bench.c  libfixcpuid.c  test.c
use_cases/cpuidtrap/module/: Makefile  fixcpuid.c  fixcpuid.h
